@@ -1,16 +1,0 @@
-<div class='titlediv'>
-  <h1 class='newstitle'> Add a group </h1>
-</div>
-<div class='bodydiv'>
-   <form action="?" method='get'>
-    <table>
-     <tr><td>Group :</td>
-         <td> 
-          <input class="formulaire" type='text' value='' size='32' name='client_group'> 
-         </td>
-     </tr>
-    </table>
-    <input type="image" name='action' value='groups_add' title="Save"
-      src='/bweb/save.png'>
-   </form>
-</div>
